container-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privategpt-app
  namespace: pedemo-yuiv-user9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: privategpt
  template:
    metadata:
      labels:
        app: privategpt
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: privategpt
        image: registry.gitlab.com/ignw1/dvs-code/cid/intel-ai-intermediate-immersion-day/privategpt:1.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 600m
            memory: 128Mi
          limits:
            cpu: 800m
            memory: 2048Mi
      imagePullSecrets:
        - name: privategpt-gitlab-pull-secret

---
apiVersion: v1
kind: Service
metadata:
  name: privategpt-service
  namespace: pedemo-yuiv-user9
spec:
  type: ClusterIP
  selector:
    app: privategpt
  ports:
    - port: 80
      targetPort: 8080
      
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: privategpt
  namespace: pedemo-yuiv-user9
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: privategpt-service
    weight: 100
  wildcardPolicy: None
